--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <body>
         <img 
             style="display: block; margin: 0 auto;" 
-            src="../LeagueofLegends_ArcaneQuotesPowder.jpg" 
+            src="./LeagueofLegends_ArcaneQuotesPowder.jpg" 
             alt="Placeholder">
     </body>
 </html><main class="page-content" aria-label="Content">
@@ -51,16 +51,16 @@
 <hr />
 
 <h2 id="introduction"><strong>Introduction</strong></h2>
-<p>Equipped with nearly a semester’s worth of practical data science tools, we set out to answer some pressing questions about the polarizing sisters of the hit show Arcane, Vi and Jinx, specifically in the context of the game itself, League of Legends. A fascinating game both in strategy and its psychological and global impact on the human race, League of Legends is a deeply complex game with many moving parts. Each game involves 2 teams, 5 characters a side, who compete on a map to capture certain objectives. At the end, a winner is declared. There are currently more than 140 different characters to choose from, each one carrying its own distinct strengths and weaknesses. Players are often forced to ask themselves: what characters are currently the best? What character will maximize my chance to win?</p>
+<p>Equipped with nearly a semester's worth of practical data science tools, we set out to answer some pressing questions about the polarizing sisters of the hit show Arcane, Vi and Jinx, specifically in the context of the game itself, League of Legends. A fascinating game both in strategy and its psychological and global impact on the human race, League of Legends is a deeply complex game with many moving parts. Each game involves 2 teams, 5 characters a side, who compete on a map to capture certain objectives. At the end, a winner is declared. There are currently more than 140 different characters to choose from, each one carrying its own distinct strengths and weaknesses. Players are often forced to ask themselves: what characters are currently the best? What character will maximize my chance to win?</p>
 
-<p>We decided to focus on Vi and Jinx in particular, comparing their win rates and answer the question: How likely is a team to win if they have Vi or Jinx on their side? To accomplish this, the project utilizes Oracle Elixir’s extensive 2024 League of Legends datasets equipped with 150588 rows and 161 different data points.</p>
+<p>We decided to focus on Vi and Jinx in particular, comparing their win rates and answer the question: How likely is a team to win if they have Vi or Jinx on their side? To accomplish this, the project utilizes Oracle Elixir's extensive 2024 League of Legends datasets equipped with 150588 rows and 161 different data points.</p>
 
 <h2 id="data-cleaning-and-exploratory-data-analysis"><strong>Data Cleaning and Exploratory Data Analysis</strong></h2>
 <p>A lot of data cleaning was needed. There were multiple columns and rows that had NA values that needed to be cleaned in order to ensure best results. We first checked how many games had NA values in the character selections to see how many fully valid games were available. In the end, the massive amount of data was compressed to just 20378 games with all 5 character selections intact. [todo - how were columns cleaned?]</p>
 
 <h3 id="univariate-analysis"><strong>Univariate Analysis</strong></h3>
 
-<p>Next, the data was filtered for Vi and Jinx games in particular.  The original non filtered dataframe was used, meaning that games with NAN values were included. This may have affected the data, but the we thought the effect wasn’t too big. The more important aspect was seeing how prevalent the use of Jinx and Vi were. We first copied the original DataFrame, changing every entry in the character selection columns to NAN if they were not Jinx or Vi. Then, all rows with all NAN values in the character selection columns were dropped. The resulting DataFrame was one-hot encoded to yield a 3 column DataFrame, a boolean denoting the presence of Jinx in a game, a boolean for Vi, and the result. We were left with 3861 games, with 512 Vi only games, 3292 Jinx only games, 236 Vi wins, and 1644 Jinx wins. Finally, these datapoints were used to create the following graph. Clearly, Jinx was the more popular character.</p>
+<p>Next, the data was filtered for Vi and Jinx games in particular.  The original non filtered dataframe was used, meaning that games with NAN values were included. This may have affected the data, but the we thought the effect wasn't too big. The more important aspect was seeing how prevalent the use of Jinx and Vi were. We first copied the original DataFrame, changing every entry in the character selection columns to NAN if they were not Jinx or Vi. Then, all rows with all NAN values in the character selection columns were dropped. The resulting DataFrame was one-hot encoded to yield a 3 column DataFrame, a boolean denoting the presence of Jinx in a game, a boolean for Vi, and the result. We were left with 3861 games, with 512 Vi only games, 3292 Jinx only games, 236 Vi wins, and 1644 Jinx wins. Finally, these datapoints were used to create the following graph. Clearly, Jinx was the more popular character.</p>
 
 <p><img src="./jinxvigames(1).png" alt="Vi and Jinx Popularity Comparison" />
 <em>Figure 1: Side-by-side bar graphs of games with Vi and games with Jinx in comparison to total games</em></p>
@@ -80,7 +80,7 @@
 <em>Figure 4: Side-by-side box plots of win rate distributions for Vi vs for Jinx</em></p>
 <h3 id="interesting-aggregates"><strong>Interesting Aggregates</strong></h3>
 
-<table>
+<table style="margin: 0 auto;">
   <thead>
     <tr>
       <th>Result</th>
@@ -111,11 +111,11 @@
 <p>Multiple evaluations were calculated such as the MSE, F-1 score, and overall accuracy of the model. Our model is optimized based on the F-1 score. Since predictions of the outcome of a League of Legends game is most useful near the beginning, the columns that were selected primarily contained statistics of the early stages of the game. For example, the model uses multiple metrics that were taken 10 minutes into the game. The average League of Legends game is 25 - 35 minutes with pro matches sometimes lasting longer.</p>
 
 <h3 id="baseline-model"><strong>Baseline Model</strong></h3>
-<p>The statistics chosen were: “csdiffat10”, “killsat10”, and “deathsat10”. “csdiffat10” denotes the difference in creep score between teams, a quantiative feature measuring the difference in the amount of minions killed by both teams. Higher creep scores genereally means more efficient gathering of reources. “killsat10” denotes the amount of kills the team has obtained against the opposing team’s characters. Similarly, “deathsat10” is a measure of how many deaths the team has suffered. These were all clear indications of success for teams: csdiff showed the difference in resources that teams managed to gather, while kills and deaths were indications of a team’s dueling abilities and who could get more key kills that would turn the tide of the game in one team’s favor.</p>
+<p>The statistics chosen were: "csdiffat10", "killsat10", and "deathsat10". "csdiffat10" denotes the difference in creep score between teams, a quantiative feature measuring the difference in the amount of minions killed by both teams. Higher creep scores genereally means more efficient gathering of reources. "killsat10" denotes the amount of kills the team has obtained against the opposing team's characters. Similarly, "deathsat10" is a measure of how many deaths the team has suffered. These were all clear indications of success for teams: csdiff showed the difference in resources that teams managed to gather, while kills and deaths were indications of a team's dueling abilities and who could get more key kills that would turn the tide of the game in one team's favor.</p>
 
 <p>The first step was to create the model pipeline. The character pick columns were one hot encoded to indicate the presence of Jinx or Vi. The three other features were added as passthrough features. After preprocessing, the data was run through Logistic Regression with a threshold of 0.5. Results are displayed below.</p>
 
-<table>
+<table style="margin: 0 auto;">
   <thead>
     <tr>
       <th>Evaluation Metric</th>
@@ -144,7 +144,7 @@
 
 <p>Although the results were not terrible, they could be better. Once again, the character picks were one-hot encoded. Next, Polynomial Features were added to increase the complexity of the model for the 3 10-minute features. We did this to see whether there was a non-linear relationship between these statistics and the win/loss of the game. The features were scaled to prevent large coefficients before being put through Logistic Regression again. A grid search of the optimal degree for the polynomial features and C value of Logistic Regression, or the strength of Regularization. The Grid Search included a cross validation of 5 iterations. Again, a threshold of .5 was used. The results are displayed below.</p>
 
-<table>
+<table style="margin: 0 auto;">
   <thead>
     <tr>
       <th>Evaluation Metric</th>
@@ -169,11 +169,11 @@
 
 <p><em>Table 2: Results of the final model (Logistic Regression)</em></p>
 
-<p>The ideal paramaters were 2 for the polynomial degree and 1 for C or the regularization strength. The Logistic Regression penalty used was “l2” and the solver was scikit-learn’s “lbgfs”. \Unfortunately, the results didn’t improve much, except for the F1 score which the model was specifically optimized for, increasing by .05.</p>
+<p>The ideal paramaters were 2 for the polynomial degree and 1 for C or the regularization strength. The Logistic Regression penalty used was "l2" and the solver was scikit-learn's "lbgfs". \Unfortunately, the results didn't improve much, except for the F1 score which the model was specifically optimized for, increasing by .05.</p>
 
 <p>We decided to try the Random Forest Classifier as well, grid searching over the polynomial features degree as well as the  number of random forest classifier trees. We did this because we had a lot of data and Random Forest Classifiers perform better with large datasets, but this model performed worse. The best paramaters were a degree of 2 for the polynomial and 300 trees.</p>
 
-<table>
+<table style="margin: 0 auto;">
   <thead>
     <tr>
       <th>Evaluation Metric</th>
@@ -200,7 +200,7 @@
 
 <p>Although not traditionally used for classification problems, we also attempted to use a Linear Regression just to see how it would compare. Surprisingly, the Linear Regression did better than expected. The original final model was fed into a Linear Regression to yield the following results:</p>
 
-<table>
+<table style="margin: 0 auto;">
   <thead>
     <tr>
       <th>Evaluation Metric</th>
@@ -230,7 +230,7 @@
 <p>Because the Logistic Regression Model with PolyFeatures performed better than Random Forest, and because Linear Regression likely is only better by coincidence, we choose the Logistic Regression Model with PolyFeatures as our final model.</p>
 
 <h3 id="conclusion"><strong>Conclusion</strong></h3>
-<p>With more late-game statistics, the model likely would have been more accurate, but less useful. Additionally, due to the intentional balancing of League of Legends games, it is likely expected that Vi and Jinx do not have a huge impact which makes the models effort to predict the outcome of the game compromised. There are very little Vi and Jinx games compared to the total number of games as well. With even more data, perhaps the model could do better. Another way to improve the model is to incorporate statistics that are available further into a match. However, although more accurate, this is clearly less practical and useful. It would, however, allow for a continued progression of odds across the game, similar to Google’s updating odds on sports games.</p>
+<p>With more late-game statistics, the model likely would have been more accurate, but less useful. Additionally, due to the intentional balancing of League of Legends games, it is likely expected that Vi and Jinx do not have a huge impact which makes the models effort to predict the outcome of the game compromised. There are very little Vi and Jinx games compared to the total number of games as well. With even more data, perhaps the model could do better. Another way to improve the model is to incorporate statistics that are available further into a match. However, although more accurate, this is clearly less practical and useful. It would, however, allow for a continued progression of odds across the game, similar to Google's updating odds on sports games.</p>
 
 <p>Overall, although the model performance was not as good as we hoped it could be, League of Legends is an incredibly complex game and the results are still impressive. GLORY TO LEAGUE OF LEGENDS!!!!!!</p>
 
